--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,11 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
 
 
 collections:
