--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: '@Pay API Documenation'
 email: info@atpay.com
 description: ""
-baseurl: "https://docs.atpay.com"
+baseurl: "http://docs.atpay.com"
 url: "https://atpay.com"
 twitter_username: atpay
 github_username:  atpay
